# cli-agent

./: .gitignore  Codex Security Report.md  README.md  pyproject.toml  requirements.txt  streamlit_app.py
cli_agent/: __init__.py  app_factory.py  constants.py  exceptions.py  http_api.py  mcp_server.py  models.py  schemas.py  settings.py  subagent.py
cli_agent/agents/: __init__.py  chat_agent.py
cli_agent/controllers/: chat_controller.py
cli_agent/managers/: __init__.py  tool_manager.py
cli_agent/services/: approved_sources.py  artifact_service.py  docker_runner.py  openai_chat_client.py  prompt_service.py  run_folder_service.py
config/: approved_sources.json
dci_poc/: __init__.py  app_factory.py  config.py  constants.py  exceptions.py  models.py  schemas.py
dci_poc/agents/: chat_agent.py
dci_poc/controllers/: __init__.py  chat_controller.py
dci_poc/managers/: tool_manager.py
dci_poc/services/: __init__.py  approved_sources.py  artifact_service.py  docker_runner.py  openai_chat_client.py  prompt_service.py  (+1 more)
frontend/: .env.example  .gitignore  README.md  package-lock.json  package.json
sample_sources/: dnd5e_hp_reference.md
scripts/: build_approved_sources.py
settings/: approved_sources.5e_phb.example.json
tests/: conftest.py  fakes.py  helpers.py  test_build_approved_sources.py  test_chat_controller_integration.py  test_http_api.py  test_mcp_server.py  test_openai_chat_client.py  test_run_folders_artifacts_and_runner.py  test_schemas_and_sources.py  test_settings.py  test_subagent.py  test_tool_manager.py
worker/: Dockerfile
(+6 files in other folders)
