[tool.poetry]
name = "cli-agent"
version = "0.1.0"
description = "Streamlit proof harness for source search and automated analysis through a CLI worker."
authors = []
packages = [{ include = "cli_agent" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pypdf = ">=4.0"
requests = ">=2.31"
streamlit = ">=1.36"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
